@@ -97,6 +97,7 @@ declare -a SOURCES=(
   Tools/print_operation.scala
   Tools/simplifier_trace.scala
   Tools/task_statistics.scala
+  Tools/update_cartouches.scala
   library.scala
   term.scala
   term_xml.scala
